src/assets/css/main.css
html, body, #root {
    height: 100%;
    margin: 0;
    padding: 0;
    position: relative;
    overflow: hidden;
  }

/* Common Variables */
:root {
    --primary-color: #03fc98;
    --primary-color-hover: #afffdf;
    --primary-text-color: #DCDCDC;
}

::selection {
    background-color: #dc1111;
}

.container {
    display: flex;
    justify-content: center;
    height: auto;
    overflow: show;
}

.container--padding {
    padding-left: 0 1rem
}

.shadow {
    box-shadow:  0px 4px 8px rgba(0, 0, 0, 0.6);
}

.shadow:hover {
    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.8);
    cursor: pointer;
}

/* Layout */

.main-grid {
    display: grid;
    grid-template-rows: 80% 1fr;
    grid-template-columns: 200px 1fr;
    grid-template-areas: 
        "sidebar main"
        "sidebar footer";
    height: 100vh;
    width: 100vw;
    overflow: auto;
}

.sidebar {
    grid-area: sidebar;
}

.main {
    grid-area: main;
    overflow: scroll;
    justify-items: center;
    align-content: start;
    scrollbar-width: none;
}

.main::-webkit-scrollbar {
    background-color: transparent;
    width: 0;
}

.footer {
    margin-top: 1rem;
    grid-area: footer;
    overflow: scroll;
}

@media screen and (max-width: 1024px) {
    .main-grid {
        display: grid;
        grid-template-rows: 0.05fr 0.9fr auto;
        grid-template-columns: 1fr;
        grid-template-areas: 
            "sidebar"
            "main"
            "footer";
        overflow: scroll;
    }    
}

/* Sidebar */

.flex-bar {
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 10rem;
    height: 100%;
    border-right: 1px solid white;
}

@media screen and (max-width: 1024px) {
    .flex-bar {
        flex-direction: row;
        border-right: none;
        border-bottom: 1px solid white;
        gap: 0;
    }
}

/* Work */

.work {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    justify-items: center;
    row-gap: 1rem;
    padding: 2rem 0
}

.work-card {
    width: 90%;
    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.6);
    transition: all 0.5s;
    padding-bottom: 10px;
    position: relative;
}

.work-card:hover {
    transform: translateY(-4px); 
    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.8);
    cursor: pointer
}

.work-card__company {
    padding: 0.5rem 1rem
}

.work-card__action {
    justify-content: center;
}

.work-card__description {
    line-height: 1.4rem;
    font-size: 0.9rem;
    color: var(--primary-text-color);
    font-family:system-ui, -apple-system, 
    BlinkMacSystemFont, 
    'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 
    'Open Sans', 'Helvetica Neue', sans-serif;
}

.work-card__points {
    font-size: 0.8rem;
}

.work-card__skills {
    display: flex;
    flex-wrap: wrap;
    gap: 0.5rem;
    padding: 0 1rem
}

@media screen and (max-width: 1024px) {
    .work {
        grid-template-columns: repeat(2, 1fr);
        column-gap: 1rem;
        padding: 1rem
    }

    .work-card {
        height: 100%
    }
}

@media screen and (max-width: 768px) {
    .work {
        grid-template-columns: 1fr;
        gap: 1rem
    }

    .work-card {
        height: 100%
    }
}

/* Footer */

.flex-footer {
    display: flex;
    width: 100%;
    height: 100%;
    align-items: center;
    justify-content: space-between;
    padding: 1.5rem 1.5rem;
    border-top: 1px solid white;
}

.icon {
    cursor: pointer;
    transition: all 0.5s;
}

.icon:hover {
    transform: scale(1.2);
    color: var(--primary-color);
}
@media screen and (max-width: 1024px) {
    .flex-footer {
        display: flex;
        width: 100%;
        height: 100%;
        padding-left: 5%;
        padding-right: 5%;
        align-items: center;
        border-top: 1px solid white;
        padding-top: 0;
        padding-bottom: 0;
        padding-bottom: 10px;
        margin-bottom: 1.5rem;
    }   

    .footer {
        padding-top: 0;
        scrollbar-width: none; /* Firefox */
        -ms-overflow-style: none; /* Internet Explorer 10+ */
    }
    /* Chrome, Edge, Safari */
    .footer::-webkit-scrollbar {
        background-color: transparent;
        width: 0;
    }
}

/* Buttons */

.button-group {
    display: flex;
    flex-direction: column;
    row-gap: 10px
}

.button-group--horizontal {
    display: flex;
    column-gap: 10px;
}

.button {
    width: 155px;
    height: 45px;
    border-radius: 0;
    font-weight: bold;
    transition: all 0.3s;
    border-radius: 3px;  
}

.button:focus {
    outline: none
}

.button--primary {
    background-color: var(--primary-color);
    color: black;
}

.button--primary:hover {
    background-color: var(--primary-color-hover);
}

.button--git {
    background-color: black;
    color: white;
}

.button--git:hover {
    background-color: white;
    color: black;
}

.button--info {
    background-color: #dc1111;
    color: white
}

.button--info:hover {
    background-color: red;
}

.sidebar-button {
    color: white;
    border-radius: 0;
    height: 55px;
    padding-top:10px;
    transition: background-color 0.3s
}

.sidebar-button-active {
    background-color: var(--primary-color);
    color: black;
}

.sidebar-button:hover {
    background-color: var(--primary-color);
    cursor: pointer;
    color: black;
}

.sidebar-button::selection {
    background-color: var(--primary-color);
}

@media screen and (max-width: 1024px) {
    .sidebar-button {
        height: 100%;
        font-size: 2rem;
        width: 25%
    }

    .button-group {
        display: flex;
        flex-direction: column;
        gap: 10px;
    }
}

@media screen and (max-width: 768px) {
    .sidebar-button {
        font-size: 1.2rem;
    }
}
/* Icons */

.contact-icons {
    display: flex;
    flex-direction: row;
    gap: 10px;
}

@media screen and (max-width: 1024px) {
    .contact-icons {
        gap: 10px
    }
}

/* Typography */

.heading-company {
    font-size: 1.5rem;
    line-height: 1;
    font-weight: 600;
}

.heading-position {
    margin-top: 0.2rem;
    font-size: 1rem;
    line-height: 1;
    font-weight: 600;
}

.heading-date {
    color: #929292;
    font-style: italic;
}

/* About */

.about__heading .heading {
    font-weight: 800;
    font-size: 3rem;
}

.about__heading .title {
    font-weight: 500;
    margin: 0
}

.about__heading .intro {
    width: auto;
    color: var(--primary-text-color);
    line-height: 1;
}

.about {
    height: 100%;
    padding: 1rem;
    width: 100%;
    margin: 0 auto;
}

.about__heading {
    height: 100%;
}

.about__description {
    height: 100%;
    color: var(--primary-text-color);
    padding: 0 2rem;
}

.about__description .about__text {
    font-family:system-ui, -apple-system, 
                BlinkMacSystemFont, 
                'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 
                'Open Sans', 'Helvetica Neue', sans-serif
}

@media screen and (max-width: 1024px) {
    .about__heading .heading {
        font-size: 2rem;
    }

    .about__heading .title {
        font-size: 1.8rem;
    }

    .about__heading .intro {
        font-size: 1.6rem;
    }

    .about__description {
        padding: 0 0.5rem
    }

    .education {
        margin: 0;
    }

    .about__description .about__text {
        font-size: 1.4rem;
    }
}

.skills {
    display: flex;
}

.skills-cards {
    display: flex;
    flex-wrap: wrap;
    gap: 1rem;
    padding-bottom: 1rem;
}

.skill-paper {
    transition: all 0.2s;
    color: #03fc98;
    padding: 1vw;;
}

.skill-paper:hover {
    transform: scale(1.1);
}

@media screen and (max-width: 1024px) {
    .skill-paper {
        font-size: 1.6rem;
    }
}

@media screen and (max-width: 768px) {
    .skill-paper {
        font-size: 1rem;
    }
}
/* List */

.list {
    width: 50%;
    padding: 0;
    margin-top: 1rem;
}

.list__item {
    padding: 0
}

.list__item .text {
    color: var(--primary-text-color)
}

@media screen and (max-width: 1024px) {
    .list {
        margin-top: 0;
    }

    .skill__title {
        font-size: 1.6rem;
    }

    .list__item .text {
        font-size: 1.2rem;
        line-height: 1;
    }

}

@media screen and (max-width: 768px) {
    .skill__title {
        font-size: 1.2rem;
    }
}

/* Projects */

.projects {
    padding: 0.5rem;
}

.project {
    max-width: 1080px;
    scrollbar-width: none;
}

.project::-webkit-scrollbar {
    background-color: transparent
}

.project__grid {
    margin: 0 auto;
    align-items: center;
}

.project__desc__content {
    display: grid;
    grid-template-areas: 
        "project"
        "buttons";
    grid-template-rows: 250px auto;
}

.project__usage, .project__info {
    grid-area: project;
}

.project__info__text {
    font-size: 1rem;
    font-family:system-ui, -apple-system, 
                BlinkMacSystemFont, 'Segoe UI', 
                Roboto, Oxygen, Ubuntu, Cantarell, 
                'Open Sans', 'Helvetica Neue', sans-serif
}

.project__buttons {
    grid-area: buttons;
    margin: 1rem;
    display: flex;
    gap: 1rem;
    flex-wrap: wrap;
}

.project__button {
    border-radius: 0;
    font-weight: bold;
    transition: all 0.3s;
    border-radius: 3px; 
    text-wrap: nowrap;
}

.project__desc__data {
    overflow-y:scroll;
    scrollbar-width: none;
}


.project .project__img img {
    width: 100%;
}

.project:last-of-type {
    margin-bottom: 2rem;
}

.project .list {
    width: 100%;
}

.project__videos {
    height: 275px;
    width: 100%;
    display: flex;
    flex-direction: row;
}

.more-projects {
    padding: 1rem;
    max-width: 1024px;
    font-size: 1.2rem;
    margin: 0 auto;
}

.more-projects__heading {
    font-size: 1.5rem;
    text-wrap: nowrap;
}
@media screen and (max-width: 768px) {
    .project__buttons {
        gap: 0.3rem;
        margin: 1rem 0;
    }

    .project__button {
        font-size: 0.5rem;
    }

    .project__videos {
        height: 150px;
    }

    .more-projects__heading {
        font-size: 1.2rem;
    }
}
@media screen and (max-width:900px) {

    .project__desc, .project__info, .project__usage {
        margin-top: 0;
    }
}

.contact {
    max-width: 550px;
    text-align: center;
    padding: 1rem;
}

@media screen and (max-width: 800px) {
    .contact {
        width: 100%
    }
}

/* Mouse Spotlight */

.mouse-spotlight-container {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    overflow: hidden;
    pointer-events: none;
    z-index: 9999;
}

.mouse-spotlight {
    background: radial-gradient(circle, rgba(255, 235, 205, 0.05) 0%, rgba(255, 235, 205, 0.0025) 70%, rgba(255, 235, 205, 0.00125) 100%);
    width: 600px;
    height: 600px;
    border-radius: 50%;
    position: absolute;
    transform: translate(-50%, -50%);
    opacity: 0;
    pointer-events: none;
}

